rust/macros/tests/invalid/target/debug/deps/only_comma_rs-fc1dd899201278e7.d
/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-fc1dd899201278e7.rmeta: only-comma.rs

/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-fc1dd899201278e7.d: only-comma.rs

only-comma.rs:
